// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Administration: Administration data for the business.
Dog: Represents a dog belonging to an owner.
Owner: Represents a dog owner who requests services.
Payment: Records payments to walkers after a walk is completed.
WalkSchedule: Schedules a walk after a walker accepts a request.
Walker: Represents a dog walker who registers and provides services.
PaymentInformation: Stores payment information for an owner.
WalkMonitoring: Monitors the start and end of a walk.
WalkRequest: A request made by an owner for a dog walk.
WalkerAvailability: Records the days of the week and times a walker is available.
WalkerRate: Sets the price for walks based on dog size and duration.
WalkerReview: Stores reviews given by owners about walkers.
'''
}

Table Administration {
    id INTEGER [primary key]
    admin_name VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Dog {
    id INTEGER [primary key]
    owner_id INTEGER 
    name VARCHAR 
    breed VARCHAR 
    size VARCHAR(10) 
    notes VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    walk_schedule_id INTEGER 
    owner_id INTEGER 
    walker_id INTEGER 
    amount INTEGER 
    payment_method VARCHAR(10) 
    status VARCHAR(10) 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkSchedule {
    id INTEGER [primary key]
    walk_request_id INTEGER 
    walker_id INTEGER 
    status VARCHAR(10) 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    postal_code VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    max_dogs_per_walk INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table PaymentInformation {
    id INTEGER [primary key]
    owner_id INTEGER 
    service VARCHAR(10) 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkMonitoring {
    id INTEGER [primary key]
    walk_schedule_id INTEGER 
    start_time DATETIME 
    end_time DATETIME 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkRequest {
    id INTEGER [primary key]
    owner_id INTEGER 
    date DATE 
    time VARCHAR(10) 
    duration VARCHAR(10) 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkerAvailability {
    id INTEGER [primary key]
    walker_id INTEGER 
    day_of_week VARCHAR(10) 
    time_of_day VARCHAR(10) 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkerRate {
    id INTEGER [primary key]
    walker_id INTEGER 
    dog_size VARCHAR(10) 
    duration VARCHAR(10) 
    price INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkerReview {
    id INTEGER [primary key]
    walk_schedule_id INTEGER 
    owner_id INTEGER 
    review_text VARCHAR 
    rating INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }



// Relationships
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: Payment.(owner_id) < Owner.(id)
    Ref: Payment.(walk_schedule_id) < WalkSchedule.(id)
    Ref: Payment.(walker_id) < Walker.(id)
    Ref: WalkSchedule.(walk_request_id) < WalkRequest.(id)
    Ref: WalkSchedule.(walker_id) < Walker.(id)
    Ref: PaymentInformation.(owner_id) < Owner.(id)
    Ref: WalkMonitoring.(walk_schedule_id) < WalkSchedule.(id)
    Ref: WalkRequest.(owner_id) < Owner.(id)
    Ref: WalkerAvailability.(walker_id) < Walker.(id)
    Ref: WalkerRate.(walker_id) < Walker.(id)
    Ref: WalkerReview.(owner_id) < Owner.(id)
    Ref: WalkerReview.(walk_schedule_id) < WalkSchedule.(id)
